tests/golden/olm/airlock-microgateway/00_prerequisites/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    name: syn-airlock-microgateway
  name: syn-airlock-microgateway
