tests/golden/olm/airlock-microgateway/00_prerequisites/01_network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    name: allow-from-waf-namespaces
  name: allow-from-waf-namespaces
  namespace: syn-airlock-microgateway
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              appuio.ch/waf: airlock
  policyTypes:
    - Ingress
